[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Writing_WBox.gd" type="Script" id=1]
[ext_resource path="res://Themes/testTheme.theme" type="Theme" id=2]
[ext_resource path="res://Scripts/Number_Panel.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_More.svg" type="Texture" id=4]
[ext_resource path="res://Scripts/Writing_WBox_Settings_Panel.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
resource_local_to_scene = true
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.956863, 0.956863, 0.956863, 0 )
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 8

[sub_resource type="StyleBoxEmpty" id=3]

[node name="WBox_Outer_Panel" type="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 650.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Number_Panel" type="Panel" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 50.0
rect_min_size = Vector2( 64, 30 )
mouse_filter = 1
mouse_default_cursor_shape = 9
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Number_Label" type="Label" parent="HBoxContainer/Number_Panel"]
modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 10.0
margin_right = 64.0
margin_bottom = 39.0
rect_min_size = Vector2( 64, 0 )
mouse_default_cursor_shape = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1 |"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WBox_Panel" type="PanelContainer" parent="HBoxContainer"]
margin_left = 72.0
margin_right = 592.0
margin_bottom = 50.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WBox_HBox" type="HBoxContainer" parent="HBoxContainer/WBox_Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 510.0
margin_bottom = 40.0
rect_min_size = Vector2( 500, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WBox_TextEdit" type="TextEdit" parent="HBoxContainer/WBox_Panel/WBox_HBox"]
visible = false
margin_right = 500.0
margin_bottom = 30.0
rect_min_size = Vector2( 500, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "// New line"
wrap_enabled = true
caret_blink = true
caret_blink_speed = 0.45

[node name="W_Label" type="RichTextLabel" parent="HBoxContainer/WBox_Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 510.0
margin_bottom = 40.0
rect_min_size = Vector2( 500, 30 )
mouse_filter = 1
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "// New line"
text = "// New line"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_Panel" type="Panel" parent="HBoxContainer"]
margin_left = 600.0
margin_right = 650.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
script = ExtResource( 5 )

[node name="Settings_Button" type="Button" parent="HBoxContainer/Settings_Panel"]
modulate = Color( 0, 0, 0, 0.25098 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -16.0
margin_top = 9.0
margin_right = 16.0
margin_bottom = 41.0
mouse_filter = 1
custom_constants/hseparation = 0
icon = ExtResource( 4 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="HBoxContainer/WBox_Panel" method="_on_WBox_Outer_Panel_gui_input"]
[connection signal="mouse_entered" from="." to="HBoxContainer/WBox_Panel" method="_on_WBox_Outer_Panel_mouse_entered"]
[connection signal="mouse_exited" from="." to="HBoxContainer/WBox_Panel" method="_on_WBox_Outer_Panel_mouse_exited"]
[connection signal="gui_input" from="HBoxContainer/Number_Panel" to="HBoxContainer/Number_Panel" method="_on_Number_Panel_gui_input"]
[connection signal="mouse_entered" from="HBoxContainer/Number_Panel" to="HBoxContainer/Number_Panel" method="_on_Number_Panel_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Number_Panel" to="HBoxContainer/Number_Panel" method="_on_Number_Panel_mouse_exited"]
[connection signal="signal_hovering" from="HBoxContainer/WBox_Panel" to="HBoxContainer/Settings_Panel" method="_on_WBox_Panel_signal_hovering"]
[connection signal="focus_exited" from="HBoxContainer/WBox_Panel/WBox_HBox/WBox_TextEdit" to="HBoxContainer/WBox_Panel" method="_on_WBox_TextEdit_focus_exited"]
[connection signal="text_changed" from="HBoxContainer/WBox_Panel/WBox_HBox/WBox_TextEdit" to="HBoxContainer/WBox_Panel" method="_on_WBox_TextEdit_text_changed"]
[connection signal="button_down" from="HBoxContainer/Settings_Panel/Settings_Button" to="HBoxContainer/Settings_Panel" method="_on_Settings_Button_button_down"]
[connection signal="mouse_entered" from="HBoxContainer/Settings_Panel/Settings_Button" to="HBoxContainer/Settings_Panel" method="_on_Settings_Button_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Settings_Panel/Settings_Button" to="HBoxContainer/Settings_Panel" method="_on_Settings_Button_mouse_exited"]
